initial work on true flawless count and character flawless count, logic fixes

--- a/app/components/player/overview.partial.html
+++ b/app/components/player/overview.partial.html
@@ -65,10 +65,13 @@
         <label>Elo Rating</label>
       </div>
       <div class="col-xs-3 stat">
-        <span class="player-main-stats__lighthouse fail" ng-if="player.lighthouse !== true"><i class="material-icons">&#xE14C;</i></span>
-        <span class="player-main-stats__lighthouse success" ng-if="player.lighthouse === true">
-          <i class="material-icons" ng-if="player.lighthouseCount">&#xE876;</i>
-          {{player.lighthouseCount ? player.lighthouseCount + 'x' : 'Year 1'}}
+        <span class="player-main-stats__lighthouse fail" ng-if="player.lighthouse.grimoire !== true">
+          <i class="material-icons">&#xE14C;</i>
+        </span>
+        <span class="player-main-stats__lighthouse success" ng-if="player.lighthouse.grimoire === true"
+              data-content="Account: {{player.lighthouse.accountCount}}<br>Character: {{player.lighthouse.characterCount}}" bs-popover>
+          <i class="material-icons" ng-if="player.lighthouse.accountCount">&#xE876;</i>
+          <span ng-bind="player.lighthouse.accountCount ? player.lighthouse.accountCount + 'x' : 'Year 1'"></span>
         </span>
         <label>Flawless</label>
       </div>
