--- a/app/components/player/overview.partial.html
+++ b/app/components/player/overview.partial.html
@@ -71,7 +71,7 @@
         <span class="player-main-stats__lighthouse success" ng-if="player.lighthouse.grimoire === true"
               data-template-url="shared/popovers/lighthouse.popover.html" bs-popover>
           <i class="material-icons" ng-if="player.lighthouse.accountCount">&#xE876;</i>
-          <span ng-bind="player.lighthouse.accountCount ? player.lighthouse.accountCount + 'x' : 'Year 1'"></span>
+          <span ng-bind="player.lighthouse.accountCount ? getLighthouseCount(player.lighthouse, subdomain) + 'x' : 'Year 1'"></span>
         </span>
         <label>Flawless</label>
       </div>
