--- a/app/components/controls/top.partial.html
+++ b/app/components/controls/top.partial.html
@@ -44,8 +44,8 @@
                      ng-model="teammateName" basic-click="suggestRecentPlayers()" ng-change="filter(teammateName)" data-toggle="dropdown">
               <ul class="dropdown-menu">
                 <li class="dropdown-menu__label">{{fireteam[0].name}}'s recent teammates</li>
-                <li ng-repeat="recentPlayer in recentPlayers" ng-if="recentPlayer.name !== fireteam[$parent.$index].name">
-                  <a href="#" ng-click="searchPlayerbyName(recentPlayer.name, platformValue, $parent.$parent.$index)" ng-bind="recentPlayer.name"></a>
+                <li ng-repeat="recentPlayer in recentPlayers" ng-if="recentPlayer.displayName !== fireteam[$parent.$index].name">
+                  <a href="#" ng-click="searchPlayerbyName(recentPlayer.displayName, platformValue, $parent.$parent.$index)" ng-bind="recentPlayer.displayName"></a>
                 </li>
               </ul>
             </div>
