--- a/app/components/inventory/weapons.template.html
+++ b/app/components/inventory/weapons.template.html
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="weapon col-xs-12" ng-repeat="weapon in weapons track by $index" ng-if="weapons">
     <div class="weapon__img">
+      <span class="weapon__damage" ng-if="weapon.damage" ng-bind="weapon.damage"></span>
       <img class="img-responsive"
            ng-src="{{weapon.definition.icon}}"
            alt="{{weapon.definition.name}}">
@@ -8,8 +9,8 @@
     <div class="weapon__info">
       <div class="weapon__title">
         <span ng-bind="weapon.definition.name"></span>
-        <span class="weapon__damage" ng-if="weapon.damage" ng-bind="weapon.damage + ' atk'"></span>
-        <span class="weapon__damage" ng-if="topWeapons && topWeapons[weapon.definition.itemHash]" ng-bind="'acc ' + topWeapons[weapon.definition.itemHash].percision + '%'"></span>
+        <span class="weapon__damage" ng-if="topWeapons && topWeapons[weapon.definition.itemHash] && topWeapons[weapon.definition.itemHash].percision > 0"
+              ng-bind="'HS ACC ' + topWeapons[weapon.definition.itemHash].percision + '%'"></span>
       </div>
       <div class="weapon__perks">
         <div class="weapon-perk" ng-repeat="node in weapon.nodes track by $index"
