--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -41,7 +41,43 @@
       </div>
     </div>
   </article>
-
+  <div class="home__aside">
+    <article class="block top-weapons shadow-z-1">
+      <div class="block__title">
+        <h2>
+          <span class="highlight">First Flawless</span> by week
+        </h2>
+      </div>
+      <div class="top-weapons__type" ng-repeat="week in flawlessLeaderboard | orderObjectBy:'-date':true" style="min-height: 112px;">
+        <div class="row">
+          <div class="col-xs-5">
+            <label class="top-weapons__label">Player</label>
+          </div>
+          <div class="col-xs-5 stat">
+            <label ng-bind="week.date | date:'medium':EST"></label>
+          </div>
+          <div class="col-xs-2 stat">
+            <label>
+              <a href="https://www.bungie.net/en/Legend/PGCR?instanceId={{week.instanceId}}" target="_blank">
+                <i class="material-icons" style="font-size: 20px;margin-top: -4px;">&#xE89E;</i>
+              </a>
+            </label>
+          </div>
+        </div>
+        <div class="row top-weapon" ng-repeat="player in week track by $index">
+          <div class="col-xs-6 last-weapon-weapon__descr">
+            <!--<img class="last-match-weapon__img img-responsive" ng-src="{{'https://www.bungie.net/' + weapon.icon}}" alt="{{weapon.name}}">-->
+            <span class="last-match-weapon__title" style="line-height: 1.3;" ng-bind="player.displayName"></span>
+          </div>
+          <div class="col-xs-6 stat" ng-if="$index < 1">
+            <img class="last-match-weapon__img img-responsive"
+                 style="position: absolute;width: 100%;height: auto;margin-left: -35px; max-height: 65px"
+                 ng-src="{{week.map}}">
+          </div>
+        </div>
+      </div>
+    </article>
+  </div>
   <!-- temporarily hidden on xs until UI bugs are resolved -->
   <div class="home__aside" ng-if="gggShow">
     <article class="block top-weapons shadow-z-1">
