--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -4,33 +4,33 @@
       <div class="blog-post__img" ng-style="{'background-image':'url(' + currentMap.pgcrImage + ')'}"></div>
       <div class="blog-post__content">
         <div class="blog-post__title">
-          <h2>Partnership with Guardian.gg!</h2>
+          <h2>Year Two Flawless Data!</h2>
         </div>
         <ul class="blog-post__meta">
           <li>
-            <p><span class="material-icons">&#xE8DF;</span> November 6th, 2015</p>
+            <p><span class="material-icons">&#xE8DF;</span> Dec 18th, 2015</p>
           </li>
         </ul>
         <div class="blog-post__text">
           <p>
-            We have recently made some friends over at <a href="https://Guardian.gg" target="_top">Guardian.gg</a>,
-            they love to collect all kinds of data and agreed to let us use anything we want to make our site more useful for you.
+            If you haven't already noticed, we figured out a way to bring you a reliable flawless count.
+            Currently it's only for Year Two since its not easy to collect but the good news is we are already
+            three weeks into the collection of Year One data.
           </p>
           <p>
-            All they want in exchange is for you to <a href="https://Guardian.gg" target="_top">visit</a> and let them
-            know what kind of data and content you would like to see more of.<br/>
+            In case you are wondering why your count is lower than you thought, keep in mind that we are only counting one
+            lighthouse visit per week, per character. Theres no way for us to determine if you sherpa'd a group and got more than one
+            flawless run that week on your Hunter/Titan/Warlock.
           </p>
           <p>
-            Right now nothing much has changed, we have replaced the Bungie rating with a custom
-            <a href="https://guardian.gg/en/faq" target="_top">Elo rating</a> that is calculated in-house by Guardian.gg<br/>
+            To your right, you will see a chart of Guardians that were first to enter the <strong>lighthouse</strong> for that week.
+            We will be trying our best to update this week in realtime as well.
           </p>
           <p>
-            We are planning some big updates coming up so stay tuned and good luck this week Guardians!
+            Keep an eye out for more updates in the near future and keep the suggestions coming. <br/>
+            Also dont forget to visit our friends over at <a href="https://Guardian.gg" target="_top">Guardian.gg</a>
+            for some great PvP and SRL statistics.
             <br/>
-          </p>
-          <p>
-            As always, if you have any suggestions for us, or if you've found a bug, please feel free to send us a message.
-            Our contact info is below. See everyone soon!<br/>
           </p>
           <p>
             <strong>If you come across any issue, error, or just want to send us a suggestion you can
