oreder by isntance id

--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -48,7 +48,7 @@
           <span class="highlight">First Flawless</span> by week
         </h2>
       </div>
-      <div class="top-weapons__type" ng-repeat="week in flawlessLeaderboard | orderObjectBy:'-date':true" style="min-height: 112px;">
+      <div class="top-weapons__type" ng-repeat="week in flawlessLeaderboard | orderObjectBy:'-instanceId':true" style="min-height: 112px;">
         <div class="row">
           <div class="col-xs-5">
             <label class="top-weapons__label">Player</label>
