--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -14,7 +14,8 @@
       </div>
     </div>
     <div class="home" ng-show="!fireteam[0] && !status" style="max-width: 1323px !important;">
-      <div ng-include="'components/home/blog.partial.html'"></div>
+      <div ng-include="'components/home/blog.partial.html'" ng-if="!sdOpponents"></div>
+      <div ng-include="'components/home/opponents.partial.html'" ng-if="sdOpponents"></div>
     </div>
     <div class="players-wrapper" ng-if="fireteam[0] && !status" ng-class="{'focus-on-player-one':focusOnPlayer===1, 'focus-on-player-two':focusOnPlayer===2, 'focus-on-player-three':focusOnPlayer===3}">
       <div class="player-shift-focus player-shift-focus--left" ng-mobile-click="shiftPlayerFocus(-1)"></div>
